# zigalloc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
zig-alloc/: build.zig  build.zig.zon
zig-alloc-rs/: Cargo.toml  build.rs
zig-alloc-rs/examples/: arena_allocator.rs  debug_allocator.rs  global_arena_allocator.rs  global_debug_allocator.rs  global_smp_allocator.rs  smp_allocator.rs
zig-alloc-rs/src/: arena_smp.rs  arena_smp_global.rs  debug.rs  debug_global.rs  ffi.rs  lib.rs  smp.rs  smp_global.rs
zig-alloc-rs/tests/: integration_leak_detection.rs  leaks_vec.rs
zig-alloc/src/: arena_smp_allocator.zig  debug_allocator.zig  ffi.zig  ffi_exports.zig  root.zig  smp_allocator.zig
zig-alloc/tests/: arena_smp_allocator_test.zig  debug_allocator_test.zig  ffi_test.zig  integration_test.zig  smp_allocator_test.zig
